--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,65 @@
+:root {
+    --primary-color: #36B7FF;
+    --secondary-color: #2D8FC5;
+}
+
 * {
-    font-family: "Poppins", sans-serif;
-    color: white;
     margin: 0;
+    padding: 0;
+    color: white;
+    background-color: inherit;
+    font-family: "Poppins", sans-serif;
+}
+
+body {
+    background-color: var(--primary-color);
 }
 
 header {
-    background-color: #2D8FC5;
+    height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 10vh;
 }
 
-li {
-    border-right: 3px solid white;
+header nav {
+    padding-right: 40px;
 }
 
-li:last-child {
-    border-right: none;
-}
-
-nav a {
-    display: block;
-    padding: 8px;
-    background-color: #2D8FC5;
-    text-decoration: none;
-}
-
-nav a:hover {
-    background-color: #36B7FF;
-}
-
-nav li {
-    float: left;
-}
-
-nav ul {
+header nav ul {
     list-style-type: none;
     overflow: hidden;
-    background-color: #2D8FC5;
     border: 3px solid white;
     border-radius: 10px;
     padding: 0;
 }
 
-nav {
-    padding-right: 40px;
+header nav li {
+    float: left;
 }
 
-.image-logo {
-    width: 23.6vh;
+header li {
+    border-right: 3px solid white;
 }
 
-.image-main {
-    height: 90vh;
-    width: 100%;
+header li:last-child {
+    border-right: none;
+}
+
+header nav a {
+    display: block;
+    padding: 8px;
+    text-decoration: none;
+}
+
+header nav a:hover {
+    background-color: var(--primary-color);
+}
+
+p, .action-button {
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-top: 20px;
 }
 
 .main-title {
@@ -65,20 +70,47 @@ nav {
     padding-bottom: 10px;
 }
 
-.title-main {
-    top: 50%;
-    left: 50%;
-    z-index: 2;
+div.section-main {
+    height: 90vh;
 }
 
-.overlay-logo {
+div.section-sub {
+    height: 50vh;
+}
+
+div.section-header-sub {
+    width: 15vw;
+}
+
+div.container-large-left {
+    width: 60vw;
+    height: 100%;
+    float: left;
+    padding: 0;
+}
+
+div.container-small-right {
+    width: 38vw;
+    height: 100%;
+    float: right;
+    padding: 0;
+}
+
+h2.section-title {
+    display: inline-block;
+    padding: 8px;
+    margin-left: 80px;
+    margin-top: 20px;
+}
+
+div.overlay-top-left {
     position: absolute;
     top: 10%;
     left: 0%;
     z-index: 2;
 }
 
-.overlay-title {
+div.overlay-center {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -89,6 +121,17 @@ nav {
     padding: 10px;
 }
 
-.primary-background {
-    background-color: #36B7FF;
+.bg-primary {
+    background-color: var(--primary-color);
+}
+
+.bg-secondary {
+    background-color: var(--secondary-color);
+}
+
+img.bg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: inline;
 }
