--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,16 @@ div.overlay-center {
     background-color: var(--secondary-color);
 }
 
+div a {
+    text-decoration: none;
+    padding: 8px;
+}
+
+div a:hover {
+    background-color: var(--secondary-color);
+    padding: 8px;
+}
+
 img.bg {
     width: 100%;
     height: 100%;
